tests/neg/polymorphic-functions1.scala
val f: [T] => (x: T) => x.type = [T] => (x: Int) => x // error
